--- a/index.html
+++ b/index.html
@@ -1,203 +1,198 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Audio / Video Splitter</title>
-
+    <title>Audio/Video Splitter + Transcribe</title>
     <style>
       body {
         font-family: Arial, sans-serif;
-        max-width: 980px;
-        margin: 20px auto;
-        padding: 0 14px;
+        background: #0f0f0f;
+        color: #fff;
+        padding: 20px;
       }
-      h1 { margin-bottom: 6px; }
-      .small { font-size: 13px; color: #444; }
-      .row {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-        align-items: center;
-        margin: 10px 0;
-      }
+      h1 { margin-top: 0; }
       .box {
-        padding: 12px;
-        border: 1px solid #ddd;
-        border-radius: 12px;
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 14px;
+        margin-bottom: 14px;
+        background: #151515;
       }
-      select, input, button {
-        padding: 8px;
-        font-size: 14px;
+      label {
+        display: block;
+        margin: 8px 0 4px;
       }
-      button { cursor: pointer; }
+      input, select, button {
+        padding: 10px;
+        margin-top: 6px;
+        border-radius: 8px;
+        border: 1px solid #333;
+        background: #0f0f0f;
+        color: #fff;
+        width: 100%;
+        box-sizing: border-box;
+      }
+      button {
+        cursor: pointer;
+        font-weight: 700;
+      }
+      button:disabled { opacity: 0.6; cursor: not-allowed; }
+      #links a {
+        display: block;
+        margin: 6px 0;
+        color: #6cb6ff;
+        text-decoration: none;
+      }
+      #links a:hover { text-decoration: underline; }
+      #detectedType {
+        margin-top: 8px;
+        opacity: 0.9;
+      }
       #log {
         white-space: pre-wrap;
-        background: #111;
-        color: #eee;
-        padding: 10px;
-        border-radius: 12px;
-        min-height: 150px;
+        background: #0b0b0b;
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 12px;
+        max-height: 260px;
+        overflow: auto;
+        font-family: Consolas, monospace;
+        font-size: 13px;
       }
-      #links a { display: block; margin: 6px 0; }
-      progress { width: 100%; height: 18px; }
-      .warn {
-        background: #fff6d8;
-        border: 1px solid #ffd36b;
-        padding: 10px;
-        border-radius: 12px;
-        margin-top: 10px;
+      .small {
+        opacity: 0.8;
+        font-size: 13px;
+        margin-top: 6px;
       }
-      .prolinks a {
-        display: inline-block;
-        margin-right: 12px;
+      .row {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+      }
+      @media(max-width: 800px){
+        .row { grid-template-columns: 1fr; }
       }
     </style>
   </head>
 
   <body>
-    <h1>Audio / Video Splitter</h1>
-    <div class="small">
-      Split big audio/video into chunks, download all as ZIP, and optionally transcribe.
-    </div>
+    <h1>Audio / Video Splitter + Transcribe</h1>
 
-    <!-- File input -->
-    <div class="row box">
+    <div class="box">
+      <label>Upload audio or video</label>
       <input id="file" type="file" accept="audio/*,video/*" />
-      <div id="detectedType" class="small"></div>
+      <div id="detectedType">No file selected</div>
     </div>
 
-    <!-- Split size -->
-    <div class="row box">
-      <label><b>Split size:</b></label>
-
-      <select id="splitSize">
-        <option value="300">5 minutes</option>
-        <option value="600">10 minutes</option>
-        <option value="1200" selected>20 minutes</option>
-        <option value="1800">30 minutes</option>
-        <option value="custom">Custom seconds</option>
-      </select>
-
-      <span id="customLabel" style="display:none;">Seconds:</span>
-      <input
-        id="customSeconds"
-        type="number"
-        min="1"
-        value="600"
-        style="display:none; width:130px;"
-      />
-    </div>
-
-    <hr style="margin:16px 0;" />
-
-<div style="padding:10px; border:1px solid #333; border-radius:8px; margin-bottom:12px;">
-  <div style="font-weight:700; margin-bottom:8px;">Quality Settings</div>
-
-  <label style="display:block; margin-bottom:6px;">
-    AI PRO WAV Quality:
-    <select id="wavQuality" style="margin-left:6px;">
-      <option value="fast" selected>Fast (16kHz mono WAV) - smallest</option>
-      <option value="good">Good (24kHz mono WAV)</option>
-      <option value="best">Best (48kHz mono WAV) - closest</option>
-      <option value="orig">Original-ish (48kHz stereo WAV) - biggest</option>
-    </select>
-  </label>
-
-  <label style="display:block;">
-    SIMPLE MP3 Quality:
-    <select id="mp3Quality" style="margin-left:6px;">
-      <option value="96">Low (96 kbps MP3)</option>
-      <option value="128" selected>Normal (128 kbps MP3)</option>
-      <option value="192">High (192 kbps MP3)</option>
-      <option value="256">Very High (256 kbps MP3)</option>
-      <option value="320">Best (320 kbps MP3)</option>
-    </select>
-  </label>
-
-  <small style="display:block; margin-top:8px; opacity:0.8;">
-    Higher quality = bigger files + slower splitting/upload.
-  </small>
-</div>
-
-    <!-- Transcription mode -->
-    <div class="row box">
-      <label><b>Transcription mode:</b></label>
-
-      <select id="transcribeMode">
-        <option value="none" selected>OFF (just split + ZIP)</option>
-        <option value="simple">SIMPLE (fast transcript, no speakers)</option>
-        <option value="best">BEST WEBSITE (speakers + timestamps, heavier)</option>
-        <option value="pro">AI PRO (GPT) — best quality (Bring Your Own Key)</option>
-      </select>
-
-      <div class="warn small">
-        <b>Speed:</b><br/>
-        ✅ SIMPLE = fastest<br/>
-        ✅ BEST = speaker labels (heavier)<br/>
-        ✅ AI PRO = best quality (needs API key)
-      </div>
-    </div>
-
-    <!-- PRO key box -->
-    <div id="proBox" class="box" style="display:none;">
+    <div class="box">
       <div class="row">
-        <input
-          id="apiKey"
-          type="password"
-          placeholder="OpenAI API Key (sk-...)"
-          style="min-width:320px;"
-        />
+        <div>
+          <label>Split length</label>
+          <select id="splitSize">
+            <option value="300">5 minutes</option>
+            <option value="600">10 minutes</option>
+            <option value="1200">20 minutes</option>
+            <option value="1800">30 minutes</option>
+            <option value="custom">Custom</option>
+          </select>
 
-        <label style="display:flex; align-items:center; gap:6px;">
-          <input id="rememberKey" type="checkbox" checked />
-          Remember key on this device
+          <label id="customLabel" style="display:none;">Custom seconds</label>
+          <input
+            id="customSeconds"
+            style="display:none;"
+            type="number"
+            min="1"
+            value="300"
+          />
+        </div>
+
+        <div>
+          <label>Transcription Mode</label>
+          <select id="transcribeMode">
+            <option value="simple" selected>SIMPLE (Local)</option>
+            <option value="best">BEST (Local Diarization)</option>
+            <option value="pro">AI PRO (OpenAI Diarization)</option>
+          </select>
+
+          <div class="small">
+            SIMPLE/BEST runs on your PC (free). AI PRO requires an OpenAI key.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ✅ Quality box auto-switches -->
+    <div class="box" id="qualityBox">
+      <div style="font-weight:700; margin-bottom:8px;">Quality Settings</div>
+
+      <!-- MP3 quality (Simple + Best) -->
+      <div id="mp3QualityRow">
+        <label>
+          MP3 Quality (SIMPLE + BEST)
+          <select id="mp3Quality">
+            <option value="96">Low (96 kbps)</option>
+            <option value="128">Normal (128 kbps)</option>
+            <option value="192" selected>High (192 kbps)</option>
+            <option value="256">Very High (256 kbps)</option>
+            <option value="320">Best (320 kbps)</option>
+          </select>
         </label>
-
-        <button id="clearKey" type="button">Clear saved key</button>
       </div>
 
-      <div class="small prolinks" style="margin-top:8px;">
-        <a
-          href="https://platform.openai.com/settings/organization/api-keys"
-          target="_blank"
-          rel="noopener noreferrer"
-        >Get an OpenAI API Key</a>
-
-        <a
-          href="https://platform.openai.com/settings/organization/billing/overview"
-          target="_blank"
-          rel="noopener noreferrer"
-        >Add billing / credits</a>
+      <!-- WAV quality (AI Pro) -->
+      <div id="wavQualityRow" style="display:none; margin-top:10px;">
+        <label>
+          WAV Quality (AI PRO)
+          <select id="wavQuality">
+            <option value="fast">Fast (16kHz mono WAV)</option>
+            <option value="good">Good (24kHz mono WAV)</option>
+            <option value="best" selected>Best (48kHz mono WAV)</option>
+            <option value="orig">Original-ish (48kHz stereo WAV)</option>
+          </select>
+        </label>
       </div>
 
-      <div class="small" style="margin-top:6px;">
-        Your key is stored only in your browser storage (if enabled).
-      </div>
+      <div class="small">Higher quality = bigger files + slower splitting.</div>
     </div>
 
-    <!-- Buttons -->
-    <div class="row">
-      <button id="start">Split</button>
+    <!-- ✅ AI PRO settings -->
+    <div class="box" id="proBox" style="display:none;">
+      <div style="font-weight:700;">AI PRO Settings</div>
 
-      <button id="zipBtn" style="display:none; padding:10px; margin-bottom:10px;">
-        Download all as ZIP
+      <label>OpenAI API Key (sk-...)</label>
+      <input id="apiKey" type="password" placeholder="sk-..." />
+
+      <label style="display:flex; gap:10px; align-items:center; margin-top:10px;">
+        <input id="rememberKey" type="checkbox" style="width:auto;" />
+        Remember key on this device
+      </label>
+
+      <button id="clearKey" type="button" style="margin-top:8px;">
+        Clear saved key
       </button>
-    </div>
 
-    <progress id="progress" value="0" max="1"></progress>
-    <div id="status" class="small" style="margin:8px 0;"></div>
-
-    <!-- Output -->
-    <div class="row box">
-      <div style="flex:1;">
-        <div class="small"><b>Downloads:</b></div>
-        <div id="links"></div>
+      <div class="small">
+        Your key is stored only in your browser storage if “Remember” is enabled.
       </div>
     </div>
 
     <div class="box">
-      <div class="small"><b>Log:</b></div>
+      <button id="start">Start Split + Transcribe</button>
+
+      <button id="zipBtn" style="display:none; margin-top:10px;">
+        Download all as ZIP
+      </button>
+
+      <label style="margin-top:12px;">Progress</label>
+      <progress id="progress" value="0" max="1" style="width:100%; height:18px;"></progress>
+
+      <div id="status" style="margin-top:10px;"></div>
+      <div id="links" style="margin-top:12px;"></div>
+    </div>
+
+    <div class="box">
+      <div style="font-weight:700; margin-bottom:8px;">Log</div>
       <div id="log"></div>
     </div>
 
