--- a/index.html
+++ b/index.html
@@ -122,38 +122,20 @@
       </div>
     </div>
 
-    <!-- ✅ Quality box auto-switches -->
+    <!-- ✅ ONE QUALITY DROPDOWN ONLY -->
     <div class="box" id="qualityBox">
-      <div style="font-weight:700; margin-bottom:8px;">Quality Settings</div>
+      <div style="font-weight:700; margin-bottom:8px;">Quality</div>
 
-      <!-- MP3 quality (Simple + Best) -->
-      <div id="mp3QualityRow">
-        <label>
-          MP3 Quality (SIMPLE + BEST)
-          <select id="mp3Quality">
-            <option value="96">Low (96 kbps)</option>
-            <option value="128">Normal (128 kbps)</option>
-            <option value="192" selected>High (192 kbps)</option>
-            <option value="256">Very High (256 kbps)</option>
-            <option value="320">Best (320 kbps)</option>
-          </select>
-        </label>
+      <label id="qualityLabel">
+        <!-- text changes automatically -->
+        Quality Setting
+      </label>
+
+      <select id="qualitySelect"></select>
+
+      <div class="small" id="qualityHint">
+        Higher quality = bigger files + slower splitting.
       </div>
-
-      <!-- WAV quality (AI Pro) -->
-      <div id="wavQualityRow" style="display:none; margin-top:10px;">
-        <label>
-          WAV Quality (AI PRO)
-          <select id="wavQuality">
-            <option value="fast">Fast (16kHz mono WAV)</option>
-            <option value="good">Good (24kHz mono WAV)</option>
-            <option value="best" selected>Best (48kHz mono WAV)</option>
-            <option value="orig">Original-ish (48kHz stereo WAV)</option>
-          </select>
-        </label>
-      </div>
-
-      <div class="small">Higher quality = bigger files + slower splitting.</div>
     </div>
 
     <!-- ✅ AI PRO settings -->
