--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       <label>Upload audio or video</label>
       <input id="file" type="file" accept="audio/*,video/*" />
       <div id="detectedType">No file selected</div>
+      <div class="small">
+        ✅ Audio = can transcribe. ✅ Video = split only (auto OFF).
+      </div>
     </div>
 
     <div class="box">
@@ -108,15 +111,16 @@
         </div>
 
         <div>
-          <label>Transcription Mode</label>
+          <label>Mode</label>
           <select id="transcribeMode">
-            <option value="simple" selected>SIMPLE (Local)</option>
-            <option value="best">BEST (Local Diarization)</option>
+            <option value="off" selected>OFF (Split only)</option>
+            <option value="simple">SIMPLE (Local)</option>
+            <option value="best">SIMPLE + SPEAKERS (BETA)</option>
             <option value="pro">AI PRO (OpenAI Diarization)</option>
           </select>
 
           <div class="small">
-            SIMPLE/BEST runs on your PC (free). AI PRO requires an OpenAI key.
+            If you upload a VIDEO, this will automatically lock to OFF.
           </div>
         </div>
       </div>
@@ -124,17 +128,13 @@
 
     <!-- ✅ ONE QUALITY DROPDOWN ONLY -->
     <div class="box" id="qualityBox">
-      <div style="font-weight:700; margin-bottom:8px;">Quality</div>
+      <div style="font-weight:700; margin-bottom:8px;">Quality / Speed</div>
 
-      <label id="qualityLabel">
-        <!-- text changes automatically -->
-        Quality Setting
-      </label>
-
+      <label id="qualityLabel">Setting</label>
       <select id="qualitySelect"></select>
 
       <div class="small" id="qualityHint">
-        Higher quality = bigger files + slower splitting.
+        Higher quality can take longer and create bigger files.
       </div>
     </div>
 
@@ -160,7 +160,7 @@
     </div>
 
     <div class="box">
-      <button id="start">Start Split + Transcribe</button>
+      <button id="start">Start</button>
 
       <button id="zipBtn" style="display:none; margin-top:10px;">
         Download all as ZIP
